# Computer_Vision_Solutions

./: .gitignore  CMakeLists.txt  README.md
assignment0/: CMakeLists.txt
assignment0/include/: directory_parser.h
assignment0/src/: chroma_key.cpp  images_to_video.cpp  video_to_images.cpp
assignment1/zhang_calibration/: CMakeLists.txt  calibrate_chessboard.cpp  images.txt  images2.txt
assignment2/: CMakeLists.txt
assignment2/results/: .~lock.assignment2.odt#  assignment2.odt
assignment2/src/: panaroma_taj_mahal.cpp  sift_matcher.cpp
assignment3/: CMakeLists.txt  correlation_window.m  epilines.h  rectify.cpp  sift_matcher.cpp  window_matching.cpp
assignment3/2018701024_assignment3/: uncalibrated_rectify.m
assignment4/: README.md  assign_gauss.m  compute_pairwise.m  compute_unary.m  cut_Tu.m  fit_gmm.m  get_rgb_double.m  grabcut.m  select_back.m  update_gmm.m
assignment4/report/: assignment4.odt
assignment5/: np_test.py
assignment5/2018701024/src/: optical_flow.py
src/: video_to_images.cpp
